test/Harper/Tests/Bad/issue040_continueOutsideOfLoop.har
main :: sideeffect -> ();
main = {
  var (i :: Integer) = 0;
  while i < 10 {
    eval printLn i ();
    i += 1;
  }
  continue;
};