test/Harper/Tests/Bad/issue040_continueOutsideOfLoop.out
Error: a `continue` statement cannot be used outside of a loop body.
During evaluation of:
 continue ;

Located at line 8 column 3

Execution terminated with an error: type error.